--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,6 +1,6 @@
-<div style="background: #ECECEC;padding:30px;">test
-    <div nz-row [nzGutter]="6">
-        <div nz-col nzSpan="6" *ngFor="let item of zhaoshis">
+<div style="background: #ECECEC;padding:30px;">
+    <div nz-row [nzGutter]="8">
+        <div nz-col nzSpan="8" *ngFor="let item of zhaoshis">
             <nz-card style="width:240px;height: 490px;" [nzCover]="coverTemplate" [nzActions]="[property]">
                 <nz-card-meta [nzTitle]="item.name" [nzDescription]="item.effect"></nz-card-meta>
             </nz-card>
