--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,3 +1,4 @@
+<h3>总数:{{total}}</h3>
 <div style="background: #ECECEC;padding:30px;">
     <div nz-row [nzGutter]="8">
         <div nz-col nzSpan="8" *ngFor="let item of zhaoshis">
